syntax = "proto3";

package cars;
option go_package = "pkg/pbcars";



message Car {
    string name = 1;
    double length = 2;
    double width = 3;
    double height = 4;
    double SA = 5;
    double elevation = 6;
}

message CarResponse {
    Car car = 1;
}

message CarRequest {
    string name = 1;
}

message CarsListResponse {
    repeated Car cars = 1;
}

message CarListRequest {}

message ServerVersionRequest {}

message ServerVersionResponse {
    string timestamp = 1;
    string version = 2;
}


service CarsService {
    rpc GetCar (CarRequest) returns (CarResponse){} ; // RPC method
    rpc GetCarsList (CarListRequest) returns (CarsListResponse){} ; // RPC method
    rpc GetServerVersion (ServerVersionRequest) returns (ServerVersionResponse){} ; // RPC method
}